configure the auth and user services